# weather-mcp-server

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
src/weather_mcp/: server.py  weather_service.py
tests/: __init__.py  test_client.py  test_sse_client.py
